fixed white space and nav sub menu

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+html{
+	margin-top: -16px; 
+}
+
 body {
 	margin: 0 0; 
 }
@@ -26,13 +30,19 @@ ul.main_nav li {
 }
 
 
+ul.main_nav a {
+	display: block; 
+}
+
 ul.sub_music_menu {
 	display: none; 
 	position: absolute;
+	margin-left: -60px;
 }
 
 ul.sub_music_menu li {
 	display: block;
+	text-align: left
 }
 
 ul.main_nav li:hover ul.sub_music_menu {
